--- a/index.html
+++ b/index.html
@@ -48,9 +48,23 @@
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="list-group-item bg-dark">
-                        <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                      <label for="city">City</label>
+                      <input type="text" placeholder="benton" id="city" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                      <label for="state">State</label>
+                      <input type="text" placeholder="ar" id="state" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                      <label for="country">Country</label>
+                      <input type="text" placeholder="us" id="country" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                      <label for="shape">Shape</label>
+                      <input type="text" placeholder="circle" id="shape" />
                     </li>
                 </ul>
+                <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
               </div>
               <div class="col-md-9 bg-dark">
                 <table class="table table-striped">
